--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Sklep komputery w Gnieźnie: Komputery, serwis, drukarki">
+    <meta name="description" content="Firma zajmuje się sprzedażą oraz serwisem sprzętu komputerowego, drukarek i osprzętu. Dostarczamy nowe komputery oraz komputery poleasingowe. Nasza siedziba znajduje się w Gnieźnie.">
     <meta name="author" content="IT Handel Krzysztof Włodarczak">
 
     <title>ithandel.pl - Komputery, Serwis, Drukarki</title>
