--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html lang="pl">
 
 <head>
-
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Firma zajmuje się sprzedażą oraz serwisem sprzętu komputerowego, drukarek i osprzętu. Dostarczamy nowe komputery oraz komputery poleasingowe. Nasza siedziba znajduje się w Gnieźnie.">
     <meta name="author" content="IT Handel Krzysztof Włodarczak">
-
-    <title>ithandel.pl - Komputery, Serwis, Drukarki</title>
-
+    <title>ITHANDEL.PL - Komputery / Drukarki / Serwis</title>
     <!-- Bootstrap Core CSS -->
     <link href="css/A.bootstrap.min.css.pagespeed.cf.ANNqluioKf.css" rel="stylesheet">
 
