--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link href="css/A.scrolling-nav.css.pagespeed.cf.5Sp-Btk0UC.css" rel="stylesheet">
     <link href="css/A.custom.css.pagespeed.cf.yRdPEBTG2P.css" rel="stylesheet">
     <link href="css/A.social.css.pagespeed.cf.t1VixacFJG.css" rel="stylesheet">
+    <link rel="canonical" href="https://ithandel.pl">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
