--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         })();
 
                         pagespeed.CriticalImages.Run('/mod_pagespeed_beacon', 'http://ithandel.pl/', 'Tt5XTryosv', true, false, '3i3Oa0uF-Aw');
-//]]></script><img src="img/xlogo.png" data-pagespeed-url-hash="3604884186"
+//]]></script><img src="img/ithandel-logo-320x80.png" data-pagespeed-url-hash="3604884186"
                         onload="pagespeed.CriticalImages.checkImageForCriticality(this);" />
 
                 </div>
