Logo stopka + telefon

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                             <span class="glyphicon glyphicon-earphone"></span>
                         </div>
                         <div class="my-footerText">
-                            <strong>61 883 37 40</strong>
+                            <strong><a href="tel:+48618833740">+48 61 883 37 40</a></strong>
                         </div>
                     </div>
                     <div class="clearfix"></div>
